[metadata]
name = viewable
version = file: VERSION
url = https://github.com/pyrustic/viewable
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Class to implement a GUI view with lifecycle
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    library
    frontend
    view
    gui
    tkinter
    view-lifecycle
    lifecycle
    desktop-application
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    tkutil

[options.entry_points]
console_scripts =
    viewable = viewable.__main__:main
